# Robotik-Praktikum

./: .gitignore  README.md
catkin_ws/src/keyboard_non_blocking_input/: package.xml
catkin_ws/src/myarm_plugin/: CMakeLists.txt  package.xml
catkin_ws/src/myarm_plugin/launch/: grip.launch  myarm.launch
catkin_ws/src/myarm_plugin/model/gripArm/: model.config  model.sdf
catkin_ws/src/myarm_plugin/model/myownArm/: model.sdf
catkin_ws/src/myarm_plugin/models/myArm/: model.config  model.launch  model.sdf  model.urdf
catkin_ws/src/myarm_plugin/scripts/: speechtest.py  voice_node.py
catkin_ws/src/myarm_plugin/src/: myarm_plugin.cc
catkin_ws/src/myarm_plugin/worlds/: demo.world  grip.world  myarm.world
myarm_plugin/: CMakeLists.txt  demo.cc  myarm.world  myarm_plugin.cc  package.xml
myarm_plugin/Outdated_butMaybeUseful/: demo.cc  myarm_plugin_noPhysics.cc
myarm_plugin/catkin_ws/src/keyboard_non_blocking_input/: CMakeLists.txt
myarm_plugin/catkin_ws/src/keyboard_non_blocking_input/src/: keyboard_non_blocking_input_node.cpp
myarm_plugin/model/Arm/: model.config  model.sdf
myarm_plugin/model/GrossesGelenk/: model.config  model.sdf
myarm_plugin/model/KleinesGelenk/: model.config  model.sdf
myarm_plugin/model/MittleresGelenk/: model.config  model.sdf
myarm_plugin/model/myownArm/: model.sdf
myarm_plugin/myarm_plugin/: myarm.world  myarm_plugin.cc
myarm_plugin/myarm_plugin/Temp/myownArm/: model.config  model.sdf
src/keyboard_non_blocking_input/: CMakeLists.txt
src/keyboard_non_blocking_input/src/: keyboard_non_blocking_input_node.cpp
src/myarm_plugin/: package.xml
src/myarm_plugin/launch/: demo.launch
src/myarm_plugin/models/myArm/: model.sdf
src/myarm_plugin/src/: myarm_plugin.cc
urdf_test/src/myrobot_control/: CMakeLists.txt  package.xml
urdf_test/src/myrobot_control/config/: myrobot_position_control.yaml  myrobot_trajectory_control.yaml
urdf_test/src/myrobot_control/launch/: myrobot_control.launch  myrobot_trajectory_control.launch
urdf_test/src/myrobot_description/: CMakeLists.txt  package.xml
urdf_test/src/myrobot_description/launch/: config.rviz  rviz.launch  spawn.launch
urdf_test/src/myrobot_description/urdf/: gazebo (copy).xacro  links_joints.xacro  myrobot.urdf.xacro  robot_parameters.xacro
urdf_test/src/myrobot_gazebo/: CMakeLists.txt  package.xml
urdf_test/src/myrobot_gazebo/launch/: empty_world.launch
urdf_test/src/myrobot_moveit_config/: .setup_assistant  package.xml
urdf_test/src/myrobot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  myrobot.srdf  ompl_planning.yaml  ros_controllers.yaml
urdf_test/src/myrobot_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_planning_execution.launch  myrobot_moveit_controller_manager.launch.xml  planning_context.launch
