<?xml version="1.0"?>
<package format="2">
  <name>myarm_plugin</name>
  <version>0.0.0</version>
  <description>The myarm_plugin package</description>

  <maintainer email="robo-nd@todo.todo">robo-nd</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
