<?xml version="1.0"?>
<package>
  <name>keyboard_non_blocking_input</name>
  <version>0.0.1</version>
  <description>The keyboard_non_blocking_input package</description>


  <!-- maintainer for base reader -->
  <maintainer email="dipendra@iitk.ac.in">Dipendra Singh</maintainer>
  <!-- maintainer for extended version (posting to topic) -->
  <maintainer email="stefan.kirchner@hs-fulda.de">Stefan Kirchner</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>  </export>
</package>
